fixed resume skills wrap on safari

--- a/src/public/styles/resume.less
+++ b/src/public/styles/resume.less
@@ -80,7 +80,7 @@
 
             .skill-container {
               .flex;
-              flex-wrap: wrap;
+              .flex-wrap(wrap);
               margin-bottom: 10px;
             }
           }
